# IA_grupo2

./: .gitignore  README.md  pipelines.py  pyproject.toml
clasificador_cnn/: cnn_model.py  predict.py  train.py
models/: callbacks.py  cnn_model.py  mlp_model.py  pipelines.py  predict.py  serve.py  train.py
test/: model_test.py
